--- a/.github/workflows/update-video-info.yml
+++ b/.github/workflows/update-video-info.yml
@@ -7,7 +7,6 @@ on:
 
 permissions:
   contents: write
-  pull-requests: write
 
 jobs:
   update-video-info:
@@ -45,7 +44,7 @@ jobs:
         env:
           DISPLAY: ':99'
       
-      - name: 変更検出とPR作成
+      - name: 変更検出と直接コミット
         id: check_changes
         run: |
           git config --local user.email "action@github.com"
@@ -58,64 +57,30 @@ jobs:
             echo "変更あり"
             echo "has_changes=true" >> $GITHUB_OUTPUT
             
-            timestamp=$(date '+%Y%m%d-%H%M%S')
-            branch_name="auto-update/video-info-$timestamp"
-            echo "branch_name=$branch_name" >> $GITHUB_OUTPUT
+            # 変更されたファイルの詳細を取得
+            changed_files=$(git diff --name-only docs/ | tr '\n' ' ')
+            echo "changed_files=$changed_files" >> $GITHUB_OUTPUT
             
-            git checkout -b "$branch_name"
+            timestamp=$(date '+%Y-%m-%d %H:%M:%S JST')
+            
+            # 変更をステージング
             git add docs/
-            git commit -m "🎬 動画情報を自動更新 ($timestamp)"
-            git push origin "$branch_name"
+            
+            # 直接mainブランチにコミット
+            git commit -m "🎬 動画情報を自動更新 (${timestamp}) - ファイル: ${changed_files}"
+            
+            # mainブランチにプッシュ
+            git push origin main
+            
+            echo "✅ 動画情報の更新をmainブランチに直接コミットしました"
           fi
-      
-      - name: プルリクエスト作成とマージ
-        if: steps.check_changes.outputs.has_changes == 'true'
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const branchName = '${{ steps.check_changes.outputs.branch_name }}';
-            const timestamp = new Date().toLocaleString('ja-JP', { timeZone: 'Asia/Tokyo' });
-            
-            // プルリクエストを作成
-            const { data: pullRequest } = await github.rest.pulls.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: '🎬 動画情報自動更新 - ' + new Date().toLocaleDateString('ja-JP'),
-              head: branchName,
-              base: 'main',
-              body: `## 📺 動画情報の自動更新\n\n実行時刻: ${timestamp}\n\nGitHub Actionsによる自動更新です。`
-            });
-            
-            console.log('プルリクエストが作成されました:', pullRequest.number);
-            
-            // 少し待機してからマージ
-            await new Promise(resolve => setTimeout(resolve, 3000));
-            
-            // プルリクエストをマージ
-            await github.rest.pulls.merge({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: pullRequest.number,
-              commit_title: '🎬 動画情報自動更新をマージ',
-              merge_method: 'squash'
-            });
-            
-            console.log('プルリクエストがマージされました');
-            
-            // ブランチを削除
-            await github.rest.git.deleteRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: `heads/${branchName}`
-            });
-            
-            console.log('ブランチが削除されました');
       
       - name: 実行結果通知
         if: always()
         run: |
           if [ "${{ steps.check_changes.outputs.has_changes }}" == "true" ]; then
-            echo "✅ 動画情報の更新とプルリクエストの作成/マージが完了しました"
+            echo "✅ 動画情報の更新が完了しました"
+            echo "更新されたファイル: ${{ steps.check_changes.outputs.changed_files }}"
           else
             echo "ℹ️ 動画情報に変更はありませんでした"
           fi
