動画情報取得スクリプトの実行時のタイムゾーン設定をJST（日本標準時）に設定

--- a/.github/workflows/update-video-info.yml
+++ b/.github/workflows/update-video-info.yml
@@ -49,6 +49,7 @@ jobs:
           ./run.sh
         env:
           DISPLAY: ':99'
+          TZ: 'Asia/Tokyo'
           # yt-dlp用の設定
           YT_DLP_CACHE_DIR: '/tmp/yt-dlp-cache'
       
