--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 get_video_info_script/venv
 get_video_info_script/crontab_backup_*.txt
 get_video_info_script/logs/cron_execution.log
+createDlCmd/menbership.ps1
+createDlCmd/niconico.ps1
